Fix horizontal alignment of Programs+Tickets headings on small screens
Currently there is no max width for widths below --medium-up, so the new
H2 headings for these two components were offset to the right when
compared to other H2s on the page (e.g. RichText). Could be observed
e.g. with 700px viewport width.

This commit focuses on achieving consistency. It might be good to have a
max width for narrow ("mobile") viewports too, but such a change should
be done "globally".

--- a/web/components/TextBlock/Programs/Programs.module.css
+++ b/web/components/TextBlock/Programs/Programs.module.css
@@ -3,8 +3,7 @@
 }
 
 .heading {
-  max-width: var(--max-body-text-width);
-  margin: 0 auto 32px;
+  margin: 0 0 32px;
 }
 
 .dayHeader {
@@ -41,7 +40,8 @@
   }
 
   .heading {
-    margin-bottom: 48px;
+    margin: 0 auto 48px;
+    max-width: var(--max-body-text-width);
   }
 
   .dayHeader {
